background-url error

--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@
 }
 
 section.header {
-  background-image: url("../images/slider1.jpg");
+  background-image: url("../images/information.jpg");
   background-size: cover;
   background-position: center;
   color: white;
