--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+.f-300 {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 300;
+}
+
+.f-400 {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 400;
+}
+
+.f-700 {
+  font-family: "Roboto", sans-serif !important;
+  font-weight: 700;
+}
+
 .Welcome {
   background-color: rgb(255, 255, 255);
   background-size: cover;
@@ -78,8 +98,40 @@ section.welcome2 {
   padding-top: 10rem;
 }
 
-.card-img-overlay {
+.text-card {
   top: 250px !important;
   left: 50px !important;
   font-size: 60px;
+}
+
+.border-left-primary {
+  border-left: 5px solid #4e73df !important;
+}
+
+.border-left-success {
+  border-left: 5px solid #1cc88a !important;
+}
+
+.border-left-info {
+  border-left: 5px solid #36b9cc !important;
+}
+
+.border-left-warning {
+  border-left: 5px solid #f6c23e !important;
+}
+
+.dashboard-bg {
+  background-color: #f8f9fc;
+}
+
+.bg-green {
+  background-color: #14a16e;
+}
+
+.navbar > .nav-item > .nav-link > span.badge.badge-counter {
+  position: absolute;
+  transform: scale(0.7);
+  transform-origin: top right;
+  right: 0.25rem;
+  margin-top: 0.2599999999999998rem;
 }
